@@ -982,7 +982,7 @@ org.openjump.core.ui.plugin.tools.ExtractPointsPlugIn.Account-for-closed-Geometr
 org.openjump.core.ui.plugin.tools.ExtractPointsPlugIn.Extract-Points = Extraire les points
 org.openjump.core.ui.plugin.tools.ExtractPointsPlugIn.description = Extraire les points composant les objets surfaciques ou lin\u00e9aires et les recopier dans une nouvelle couche. Note, pour les contours de surface, une option permet de ne pas r\u00e9p\u00e9ter le dernier point qui est identique au premier.
 org.openjump.core.ui.plugin.tools.ExtractPointsPlugIn.points = points
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Join-Attributes-Spatially = Jointure spatiale avec agr\u00e9gation d'attribut...
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Join-Attributes-Spatially = Jointure spatiale avec agr\u00e9gation d'attribut
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Joins-attributes-of-source-layer-according-to-a-spatial-and-a-statistic-criterion = Agr\u00e8ge les attributs d'une couche source en fonction d'un crit\u00e8re spatial et d'une fonction statistique
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.buffer-radius = Taille de la zone tampon
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.count = Nombre
