@@ -1,3 +1,11 @@
+2011-12-12 mmichaud <michael.michaud@free.fr>
+    * Small improvements in the user interface
+      - back to small icons for Open wizard in File menu and layer context menu
+      - add icon for File > Add Image Layer menu item
+      - center dialog box for CalculateAreasAndLengthsPlugIn
+      - center dialog box for JoinWithArcPlugIn
+      - JoinAttributesSpatially : typo (no ellipsis needed in dialog box)
+
 2011-12-11 Matthias Scholz <ms@jammerhund.de>
 	* com.vividsolutions.jump.workbench.ui.plugin.FirstTaskFramePlugIn
 		* If we start OJ with a project file, now this is done with the new
